# smartwatch

./: README.md  fp-info-cache  fp-lib-table  smartwatch.kicad_pcb  smartwatch.kicad_prl  smartwatch.kicad_pro  smartwatch.kicad_sch  status.txt  sym-lib-table
Hardware/: #auto_saved_files#  _autosave-smartwatch.kicad_pcb  fp-info-cache  fp-lib-table  smartwatch.kicad_pcb  smartwatch.kicad_prl  smartwatch.kicad_pro  smartwatch.kicad_sch  status.txt  sym-lib-table
Hardware/docs/: cover.stl  watch_L_holes.stl  watch_S_holes.stl
Hardware/libraries/: 5022441530.stp  AP7313-18SRG-7.STEP  NEW_PCB_2023-11-04.pcbdoc  NORA-B120-00B.stp
Hardware/librariesbmi270/: BMI270.kicad_sym  XDCR_BMI270.kicad_mod
Hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Software/: CMakeLists.txt  Kconfig  nrf5340dk_nrf5340_cpuapp_ns.overlay  prj.conf  smartwatch_ui.sll  smartwatch_ui.spj
Software/.metals/: metals.lock.db  metals.mv.db
Software/boards/: smartwatch_nrf5340_cpuapp_common.dts  smartwatch_nrf5340_cpuapp_common_pincontrol.dtsi
Software/drivers/display/: CMakeLists.txt
Software/drivers/display/gc9a01/: CMakeLists.txt  gc9a01.c  gc9a01.h
Software/dts/bindings/display/: buydisplay,gc9101.yaml
Software/dts/bindings/input/: hynitron,cst816d.yaml
Software/dts/bindings/rtc/: microcrystal,RV-3028-C7.yaml  microcrystal,RV3028C7.yaml
Software/src/: backup.txt  dfu_test.c  main.c  works.txt
Software/src/accelometer/: accelometer.c  accelometer.h
Software/src/clock/: clock.c  clock.h
Software/src/display/: CMakeLists.txt  gc9a01.c  gc9a01.h
Software/src/display_control/: display_control.c  display_control.h
Software/src/drivers/: CMakeLists.txt
Software/src/drivers/RV3028/: RV3028_Defs.h
Software/src/drivers/bmi270/: bmi270.c
Software/src/drivers/gc9a01/: backup.c  battery_img.h  gc9a01.c  gc9a01.h  img.h
Software/src/drivers/gnss/: gnss.c  gnss.h
Software/src/drivers/input/cst816d/: backup.txt  input_cst816d.c  polling.txt
Software/src/drivers/lis2mdl/: CMakeLists.txt  Kconfig  lis2mdl.c
Software/src/drivers/max30101/: algorithm.c  algorithm.h  max30101.c  max30101.h
Software/src/drivers/rtc/: rtc.c  rtc.h
Software/src/drivers/touch_panel/: Kconfig  cst816s.c
Software/src/rtc/: rtc.c  rtc.h
Software/src/sensor_data/: battery_gauge.c  battery_gauge.h  inertial_measurement.c  inertial_measurement.h  sensor_data.c  sensor_data.h
Software/src/ui/: CMakeLists.txt  filelist.txt  home_backup.txt  ui.c  ui.h  ui_Battery.c  ui_Brightness.c  ui_Date.c  ui_GpsTest.c  ui_Home.c  ui_List.c  ui_Pulse.c  ui_SensorTest.c  ui_Time.c  ui_events.h  ui_exerciseMenu.c  ui_helpers.c  ui_helpers.h  ui_img_1111712444.c  ui_img_battery_half_png.c  ui_img_calendar.c  ui_powerManagment.c  ui_settingsMenu.c
Software/src/ui/components/: ui_comp_hook.c
Software/src/ui/icons/: home_icons_14.c  icons.h  icons_16.c  icons_26.c  icons_36.c  orbitron_24.c  roboto_14.c  roboto_16.c  roboto_18.c  roboto_22.c  roboto_26.c  roboto_48.c  roboto_68.c
Software/src/ui/images/: ui_img_1111712444.c  ui_img_battery_charge_png.c  ui_img_battery_full_png.c  ui_img_battery_half_png.c  ui_img_battery_high_png.c  ui_img_battery_mid_png.c  ui_img_battery_png.c  ui_img_bluetooth_png.c  ui_img_brightness_png.c  ui_img_calendar_png.c  ui_img_clock_png.c  ui_img_exercise1_png.c  ui_img_exercise2_png.c  ui_img_exercise_colored_png.c  ui_img_exercise_png.c  ui_img_headphones_png.c  ui_img_heart16_png.c  ui_img_heart20_png.c  ui_img_heart_png.c  ui_img_lightning_green_png.c  ui_img_lightning_png.c  ui_img_settings2_png.c  ui_img_settings_filled_png.c  ui_img_settings_icon_png.c  ui_img_settings_png.c  ui_img_steps16_png.c  ui_img_steps20_png.c
Software/src/ui/menus/: ui_mainMenu.c  ui_settingsMenu.c
Software/src/ui/screens/: ui_Screen1.c
libraries/: 5022441530.stp  fp-info-cache
libraries/CFSH05-20L/: CFSH05-20L.kicad_sym
libraries/CX2016DB32000D0WZRC1/: OSCCC200X160X45N.kicad_mod
libraries/L96-M33/: L96-M33.kicad_sym  XCVR_L96-M33.kicad_mod
libraries/LM66200DRLR/: part_info.txt
libraries/LTC4413EDD_PBF/: SON50P300X300X80-11N.kicad_mod
libraries/MAX30102EFD_T/: MAX30102EFD_T.kicad_sym
libraries/MOLEX-5027740891/: 5027740891.step  MOLEX_5027740891.kicad_mod
libraries/NINA_B112_04B/: NINA-B112-04B.step  XCVR_NINA-B112-04B.kicad_mod
libraries/W3008/: W3008.kicad_sym  (+2 more)
production/: bom.csv  designators.csv  netlist.ipc  positions.csv
smartwatch/: xaion.kicad_prl  xaion.kicad_pro
(+163 files in other folders)
